Largely switch from \ExplFileDate to explicit value
As this is auto-edited by l3build there is no general need to have
a defined variable. In expl3 for the present that is retained: it
leaves \ExplFileDate as a version string for the release as a whole
but is also easier than dropping it for doing the loader/code check.

--- a/l3experimental/l3str/l3str-format.dtx
+++ b/l3experimental/l3str/l3str-format.dtx
@@ -22,7 +22,6 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\def\ExplFileDate{2017/03/18}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -48,7 +47,7 @@
 %    }^^A
 % }
 %
-% \date{Released \ExplFileDate}
+% \date{Released 2017/03/18}
 %
 % \maketitle
 %
@@ -164,7 +163,7 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3str-format}{\ExplFileDate}{}
+\ProvidesExplPackage{l3str-format}{2017/03/18}{}
   {L3 Experimental string formatting}
 \RequirePackage{l3str}
 %</package>
