--- a/l3experimental/l3str/l3tl-analysis.dtx
+++ b/l3experimental/l3str/l3tl-analysis.dtx
@@ -22,7 +22,6 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\def\ExplFileDate{2017/03/18}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -47,7 +46,7 @@
 %    }^^A
 % }
 %
-% \date{Released \ExplFileDate}
+% \date{Released 2017/03/18}
 %
 % \maketitle
 %
@@ -172,7 +171,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplPackage{l3tl-analysis}{\ExplFileDate}{}
+\ProvidesExplPackage{l3tl-analysis}{2017/03/18}{}
   {L3 Experimental token list analysis}
 %    \end{macrocode}
 %
