--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -23,7 +23,6 @@
 %
 %<*driver>
 \documentclass[full]{l3doc}
-\def\ExplFileDate{2017/03/18}
 \begin{document}
   \DocInput{\jobname.dtx}
 \end{document}
@@ -43,7 +42,7 @@
 %    }^^A
 % }
 %
-% \date{Released \ExplFileDate}
+% \date{Released 2017/03/18}
 %
 % \maketitle
 %
