--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -40,7 +40,6 @@
 %<package>      }%
 %<package>    \endinput
 %<package>  }
-\def\ExplFileDate{2017/03/18}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -68,7 +67,7 @@
 %    }^^A
 % }
 %
-% \date{Released \ExplFileDate}
+% \date{Released 2017/03/18}
 %
 % \maketitle
 %
@@ -777,7 +776,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplPackage{xparse}{\ExplFileDate}{}
+\ProvidesExplPackage{xparse}{2017/03/18}{}
   {L3 Experimental document command parser}
 %    \end{macrocode}
 %
