--- a/l3trial/l3htoks/l3htoks.dtx
+++ b/l3trial/l3htoks/l3htoks.dtx
@@ -36,7 +36,6 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\def\ExplFileDate{2017/03/18}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -59,7 +58,7 @@
 %    }^^A
 % }
 %
-% \date{Released \ExplFileDate}
+% \date{Released 2017/03/18}
 %
 % \maketitle
 %
@@ -169,7 +168,7 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3htoks}{\ExplFileDate}{}
+\ProvidesExplPackage{l3htoks}{2017/03/18}{}
   {L3 Experimental conversion of tokens to text}
 %</package>
 %    \end{macrocode}
