--- a/l3trial/l3ldb/l3ldbparse.dtx
+++ b/l3trial/l3ldb/l3ldbparse.dtx
@@ -36,7 +36,6 @@
 %%
 %<*driver|package>
 \RequirePackage{expl3}
-\def\ExplFileDate{2017/03/18}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -62,7 +61,7 @@
 %    }^^A
 % }
 %
-% \date{Released \ExplFileDate}
+% \date{Released 2017/03/18}
 %
 % \maketitle
 %
@@ -110,7 +109,7 @@
 %    \begin{macrocode}
 %<*package>
 \RequirePackage{expl3}
-\ProvidesExplPackage{l3ldbparse}{\ExplFileDate}{}
+\ProvidesExplPackage{l3ldbparse}{2017/03/18}{}
   {L3 Experimental resource database parsing}
 %    \end{macrocode}
 %
