--- a/l3trial/l3str-format-new/l3str-format-new.dtx
+++ b/l3trial/l3str-format-new/l3str-format-new.dtx
@@ -35,7 +35,6 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\def\ExplFileDate{2017/03/18}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -59,7 +58,7 @@
 %    }^^A
 % }
 %
-% \date{Released \ExplFileDate}
+% \date{Released 2017/03/18}
 %
 % \maketitle
 %
@@ -295,7 +294,7 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3str-format-new}{\ExplFileDate}{}
+\ProvidesExplPackage{l3str-format-new}{2017/03/18}{}
   {L3 Experimental formatting as strings}
 \RequirePackage{l3str}
 %</package>
