--- a/l3trial/l3tree/l3tree.dtx
+++ b/l3trial/l3tree/l3tree.dtx
@@ -36,7 +36,6 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\def\ExplFileDate{2017/03/18}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -60,7 +59,7 @@
 %    }^^A
 % }
 %
-% \date{Released \ExplFileDate}
+% \date{Released 2017/03/18}
 %
 % \maketitle
 %
@@ -100,7 +99,7 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3tree}{\ExplFileDate}{}
+\ProvidesExplPackage{l3tree}{2017/03/18}{}
   {L3 Experimental tree manipulations}
 %</package>
 %    \end{macrocode}
