--- a/l3trial/xfont/l3font.dtx
+++ b/l3trial/xfont/l3font.dtx
@@ -36,7 +36,6 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\def\ExplFileDate{2017/03/18}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -61,7 +60,7 @@
 %    }^^A
 % }
 %
-% \date{Released \ExplFileDate}
+% \date{Released 2017/03/18}
 %
 % \maketitle
 %
@@ -287,7 +286,7 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3font}{\ExplFileDate}{}
+\ProvidesExplPackage{l3font}{2017/03/18}{}
   {L3 Experimental font loading}
 %</package>
 %<*initex|package>
