--- a/l3trial/xfont/xfss-setup.dtx
+++ b/l3trial/xfont/xfss-setup.dtx
@@ -22,7 +22,6 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\def\ExplFileDate{2017/03/18}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -45,7 +44,7 @@
 %    }^^A
 % }
 %
-% \date{Released \ExplFileDate}
+% \date{Released 2017/03/18}
 % \maketitle
 % \tableofcontents
 %
@@ -65,7 +64,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplFile{xfss-setup.cfg}{\ExplFileDate}{}
+\ProvidesExplFile{xfss-setup.cfg}{2017/03/18}{}
   {L3 Experimental font selection setup}
 %    \end{macrocode}
 %
