--- a/l3trial/xfont/xfss.dtx
+++ b/l3trial/xfont/xfss.dtx
@@ -39,7 +39,6 @@
 %<*hook>
 \RequirePackage{l3hooks}
 %</hook>
-\def\ExplFileDate{2017/03/18}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -62,7 +61,7 @@
 %    }^^A
 % }
 %
-% \date{Released \ExplFileDate}
+% \date{Released 2017/03/18}
 % \maketitle
 % \tableofcontents
 %
@@ -152,7 +151,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplPackage{xfss}{\ExplFileDate}{}
+\ProvidesExplPackage{xfss}{2017/03/18}{}
   {L3 Experimental font selection}
 \RequirePackage{xparse}
 \RequirePackage{l3font}
