--- a/l3kernel/l3bootstrap.dtx
+++ b/l3kernel/l3bootstrap.dtx
@@ -119,7 +119,6 @@
 % \end{macro}
 %</driver|package>
 %<*driver>
-\def\ExplFileDate{2017/03/18}
 \documentclass[full]{l3doc}
 \begin{document}
   \DocInput{\jobname.dtx}
@@ -140,7 +139,7 @@
 %    }^^A
 % }
 %
-% \date{Released \ExplFileDate}
+% \date{Released 2018/03/18}
 %
 % \maketitle
 %
