--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -24,7 +24,6 @@
 %
 %<*driver>
 \documentclass[full]{l3doc}
-\def\ExplFileDate{2017/03/18}
 \begin{document}
   \DocInput{\jobname.dtx}
 \end{document}
@@ -44,7 +43,7 @@
 %    }^^A
 % }
 %
-% \date{Released \ExplFileDate}
+% \date{Released 2017/03/18}
 %
 % \maketitle
 %
