--- a/l3kernel/l3oldmodules.dtx
+++ b/l3kernel/l3oldmodules.dtx
@@ -21,7 +21,6 @@
 % for those people who are interested.
 %
 %<*driver|oldmodules>
-\def\ExplFileDate{2017/03/18}
 %</driver|oldmodules>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -43,7 +42,7 @@
 % }
 %
 %
-% \date{Released \ExplFileDate}
+% \date{Released 2017/03/18}
 %
 % \maketitle
 %
@@ -116,8 +115,7 @@
 %    \begin{macrocode}
 \ProvidesPackage\old@liii@module@name
   [%
-    \ExplFileDate\space v-no-info
-    Obsolete L3 package
+    2017/03/18 Obsolete L3 package
   ]
 %    \end{macrocode}
 %    Describe the current situation on the terminal, then generate an
