--- a/l3packages/xfp/xfp.dtx
+++ b/l3packages/xfp/xfp.dtx
@@ -37,7 +37,6 @@
 %<package>    \endinput
 %<package>  }
 %<package>\RequirePackage{xparse}
-\def\ExplFileDate{2017/03/18}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -63,7 +62,7 @@
 %    }^^A
 % }
 %
-% \date{Released \ExplFileDate}
+% \date{Released 2017/03/18}
 %
 % \maketitle
 %
@@ -144,7 +143,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplPackage{xfp}{\ExplFileDate}{}
+\ProvidesExplPackage{xfp}{2017/03/18}{}
   {L3 Floating point unit}
 %    \end{macrocode}
 %
