--- a/l3trial/l3bigint/l3bigint.dtx
+++ b/l3trial/l3bigint/l3bigint.dtx
@@ -36,7 +36,6 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\def\ExplFileDate{2017/03/18}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -59,7 +58,7 @@
 %    }^^A
 % }
 %
-% \date{Released \ExplFileDate}
+% \date{Released 2017/03/18}
 %
 % \maketitle
 %
@@ -606,7 +605,7 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3bigint}{\ExplFileDate}{}
+\ProvidesExplPackage{l3bigint}{2017/03/18}{}
   {L3 Experimental unbounded integer support}
 %</package>
 %    \end{macrocode}
