--- a/l3trial/l3fp-extras/l3fp-symbolic.dtx
+++ b/l3trial/l3fp-extras/l3fp-symbolic.dtx
@@ -22,7 +22,6 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\def\ExplFileDate{2017/03/18}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -46,7 +45,7 @@
 %    }^^A
 % }
 %
-% \date{Released \ExplFileDate}
+% \date{Released 2017/03/18}
 %
 % \maketitle
 %
