--- a/l3kernel/l3syntax-changes.tex
+++ b/l3kernel/l3syntax-changes.tex
@@ -31,7 +31,7 @@ The released version of this bundle is available from CTAN.
         {latex-team@latex-project.org}%
     }%
 }
-\date{Released \filedate}
+\date{Released 2017/03/18}
 
 \newcommand{\TF}{\textit{(TF)}}
 
