--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -29,14 +29,17 @@
 \askforoverwritefalse
 \preamble
 
+Copyright (C) 1990-2017 The LaTeX3 Project
 
-EXPERIMENTAL CODE
+It may be distributed and/or modified under the conditions of
+the LaTeX Project Public License (LPPL), either version 1.3c of
+this license or (at your option) any later version.  The latest
+version of this license is in the file:
 
-Do not distribute this file without also distributing the
-source files specified above.
+   http://www.latex-project.org/lppl.txt
 
-Do not distribute a modified version of this file.
-
+This file is part of the "l3kernel bundle" (The Work in LPPL)
+and all files in that bundle must be distributed together.
 
 \endpreamble
 % stop docstrip adding \endinput
