New LuaTeX (v1.0.4) primitives

--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -774,6 +774,7 @@
   \__kernel_primitive:NN \aligntab                    \luatex_aligntab:D
   \__kernel_primitive:NN \attribute                   \luatex_attribute:D
   \__kernel_primitive:NN \attributedef                \luatex_attributedef:D
+  \__kernel_primitive:NN \automatichyphenpenalty      \luatex_automatichyphenpenalty:D
   \__kernel_primitive:NN \begincsname                 \luatex_begincsname:D
   \__kernel_primitive:NN \catcodetable                \luatex_catcodetable:D
   \__kernel_primitive:NN \clearmarks                  \luatex_clearmarks:D
@@ -787,6 +788,7 @@
   \__kernel_primitive:NN \dvivariable                 \luatex_dvivariable:D
   \__kernel_primitive:NN \etoksapp                    \luatex_etoksapp:D
   \__kernel_primitive:NN \etokspre                    \luatex_etokspre:D
+  \__kernel_primitive:NN \explicithyphenpenalty       \luatex_explicithyphenpenalty:D
   \__kernel_primitive:NN \expanded                    \luatex_expanded:D
   \__kernel_primitive:NN \firstvalidlanguage          \luatex_firstvalidlanguage:D
   \__kernel_primitive:NN \fontid                      \luatex_fontid:D
@@ -795,6 +797,7 @@
   \__kernel_primitive:NN \hpack                       \luatex_hpack:D
   \__kernel_primitive:NN \hyphenationbounds           \luatex_hyphenationbounds:D
   \__kernel_primitive:NN \hyphenationmin              \luatex_hyphenationmin:D
+  \__kernel_primitive:NN \hyphenpenaltymode           \luatex_hyphenpenaltymode:D
   \__kernel_primitive:NN \gleaders                    \luatex_gleaders:D
   \__kernel_primitive:NN \initcatcodetable            \luatex_initcatcodetable:D
   \__kernel_primitive:NN \lastnamedcs                 \luatex_lastnamedcs:D
