Add \box_autosize_... functions

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -92,6 +92,49 @@
 % On the other hand, rotation and resizing of boxed material can best be
 % handled by modifying boxes. These transformations are described here.
 %
+% \begin{function}[added = 2017-04-04]
+%   {\box_autosize_to_wd_and_ht:Nnn, \box_autosize_to_wd_and_ht:Nnn}
+%   \begin{syntax}
+%     \cs{box_autosize_to_wd_and_ht:Nnn} \meta{box} \Arg{x-size} \Arg{y-size}
+%   \end{syntax}
+%   Resize the \meta{box} to fit within the given \meta{x-size} (horizontally)
+%   and \meta{y-size} (vertically): both of the sizes are dimension
+%   expressions).
+%   The \meta{y-size} is the height only: it does not include any depth.
+%   The updated \meta{box} will be an hbox, irrespective of the nature
+%   of the \meta{box}  before the resizing is applied. The final size of the
+%   box will be the smaller of \Arg{x-size} and \Arg{y-size}, \emph{i.e.}~the
+%   result will fit within the dimensions specified.
+%   Negative sizes will
+%   cause the material in the \meta{box} to be reversed in direction, but the
+%   reference point of the \meta{box} will be unchanged.
+%   Thus negative $y$-sizes will result in a box a depth dependent on the
+%   height of the original box a height dependent on the depth.
+%   The resizing applies within the current \TeX{} group level.
+% \end{function}
+%
+% \begin{function}[added = 2017-04-04]
+%   {\box_autosize_to_wd_and_ht_plus_dp:Nnn, \box_autosize_to_wd_and_ht_plus_dp:Nnn}
+%   \begin{syntax}
+%     \cs{box_autosize_to_wd_and_ht_plus_dp:Nnn} \meta{box} \Arg{x-size} \Arg{y-size}
+%   \end{syntax}
+%   Resize the \meta{box} to fit within the given \meta{x-size} (horizontally)
+%   and \meta{y-size} (vertically): both of the sizes are dimension
+%   expressions).
+%   The \meta{y-size} is the vertical size (height plus depth) of
+%   the box.
+%   The updated \meta{box} will be an hbox, irrespective of the nature
+%   of the \meta{box}  before the resizing is applied. The final size of the
+%   box will be the smaller of \Arg{x-size} and \Arg{y-size}, \emph{i.e.}~the
+%   result will fit within the dimensions specified.
+%   Negative sizes will
+%   cause the material in the \meta{box} to be reversed in direction, but the
+%   reference point of the \meta{box} will be unchanged.
+%   Thus negative $y$-sizes will result in a box a depth dependent on the
+%   height of the original box a height dependent on the depth.
+%   The resizing applies within the current \TeX{} group level.
+% \end{function}
+%
 % \begin{function}{\box_resize:Nnn, \box_resize:cnn}
 %   \begin{syntax}
 %     \cs{box_resize:Nnn} \meta{box} \Arg{x-size} \Arg{y-size}
@@ -1369,13 +1412,13 @@
 % \end{macro}
 %
 % \begin{macro}{\box_scale:Nnn, \box_scale:cnn}
+% \begin{macro}[aux]{\@@_scale_aux:N}
 %   When scaling a box, setting the scaling itself is easy enough. The
 %   new dimensions are also relatively easy to find, allowing only for
 %   the need to keep them positive in all cases. Once that is done then
 %   after a check for the trivial scaling a hand-off can be made to the
-%   common code. The dimension scaling operations are carried out using
-%   the \TeX{} mechanism as it avoids needing to use too many \texttt{fp}
-%   operations.
+%   common code. The code here is split into two as this allows sharing
+%   with the auto-resizing functions.
 %    \begin{macrocode}
 \cs_new_protected:Npn \box_scale:Nnn #1#2#3
   {
@@ -1384,22 +1427,63 @@
         \group_begin:
           \fp_set:Nn \l_@@_scale_x_fp {#2}
           \fp_set:Nn \l_@@_scale_y_fp {#3}
-          \dim_set:Nn \l_@@_top_dim    {  \box_ht:N #1 }
-          \dim_set:Nn \l_@@_bottom_dim { -\box_dp:N #1 }
-          \dim_set:Nn \l_@@_right_dim  {  \box_wd:N #1 }
-          \dim_zero:N \l_@@_left_dim
-          \dim_set:Nn \l_@@_top_new_dim
-            { \fp_abs:n { \l_@@_scale_y_fp } \l_@@_top_dim }
-          \dim_set:Nn \l_@@_bottom_new_dim
-            { \fp_abs:n { \l_@@_scale_y_fp } \l_@@_bottom_dim }
-          \dim_set:Nn \l_@@_right_new_dim
-              { \fp_abs:n { \l_@@_scale_x_fp } \l_@@_right_dim }
-           \@@_resize_common:N #1
+          \@@_scale_aux:N #1
         \group_end:
       }
   }
 \cs_generate_variant:Nn \box_scale:Nnn { c }
+\cs_new_protected:Npn \@@_scale_aux:N #1
+  {
+    \dim_set:Nn \l_@@_top_dim    {  \box_ht:N #1 }
+    \dim_set:Nn \l_@@_bottom_dim { -\box_dp:N #1 }
+    \dim_set:Nn \l_@@_right_dim  {  \box_wd:N #1 }
+    \dim_zero:N \l_@@_left_dim
+    \dim_set:Nn \l_@@_top_new_dim
+      { \fp_abs:n { \l_@@_scale_y_fp } \l_@@_top_dim }
+    \dim_set:Nn \l_@@_bottom_new_dim
+      { \fp_abs:n { \l_@@_scale_y_fp } \l_@@_bottom_dim }
+    \dim_set:Nn \l_@@_right_new_dim
+      { \fp_abs:n { \l_@@_scale_x_fp } \l_@@_right_dim }
+    \@@_resize_common:N #1
+  }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}
+%   {
+%     \box_autosize_to_wd_and_ht:Nnn         ,
+%     \box_autosize_to_wd_and_ht:cnn         ,
+%     \box_autosize_to_wd_and_ht_plus_dp:cnn ,
+%     \box_autosize_to_wd_and_ht_plus_dp:Nnn
+%   }
+% \begin{macro}[aux]{\@@_autosize:Nnnn}
+%   Although autosizing a box uses dimensions, it has more in common in
+%   implementation with scaling. As such, most of the real work here is
+%   done elsewhere.
+%    \begin{macrocode}
+\cs_new_protected:Npn \box_autosize_to_wd_and_ht:Nnn #1#2#3
+  { \@@_autosize:Nnnn #1 {#2} {#3} { \box_ht:N #1 } }
+\cs_generate_variant:Nn \box_autosize_to_wd_and_ht:Nnn { c }
+\cs_new_protected:Npn \box_autosize_to_wd_and_ht_plus_dp:Nnn #1#2#3
+  { \@@_autosize:Nnnn #1 {#2} {#3} { \box_ht:N #1 + \box_dp:N #1 } }
+\cs_generate_variant:Nn \box_autosize_to_wd_and_ht_plus_dp:Nnn { c }
+\cs_new_protected:Npn \@@_autosize:Nnnn #1#2#3#4
+  {
+    \hbox_set:Nn #1
+      {
+        \group_begin:
+          \fp_set:Nn \l_@@_scale_x_fp { (#2) / \box_wd:N #1 }
+          \fp_set:Nn \l_@@_scale_y_fp { (#3) / (#4) }
+          \fp_compare:nNnTF \l_@@_scale_x_fp > \l_@@_scale_y_fp
+            { \fp_set_eq:NN \l_@@_scale_x_fp \l_@@_scale_y_fp }
+            { \fp_set_eq:NN \l_@@_scale_y_fp \l_@@_scale_x_fp }
+          \@@_scale_aux:N #1
+        \group_end:
+      }
+  }
+%    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \begin{macro}[aux]{\@@_resize_common:N}
