--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1479,6 +1479,7 @@
               { \box_use:N #1 }
           }
       }
+    \cs_new_protected:Npn \color_ensure_current: { \set@color }
   }
 %    \end{macrocode}
 % \end{macro}
