Rename \box_resize:Nnn => \box_resize_to_ht_plus_dp:Nnn
As the old name is used in the wild and as we are making the
new function stable, the original will go down as formally
deprecated.

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1417,7 +1417,7 @@
 % \begin{macro}
 %   {
 %     \box_rotate:Nn,
-%     \box_resize:Nnn,
+%     \box_resize_to_wd_and_ht_plus_dp:Nnn,
 %     \box_resize_to_ht_plus_dp:Nn,
 %     \box_resize_to_wd:Nn,
 %     \box_scale:Nnn
@@ -1444,7 +1444,7 @@
       }
     \cs_set_protected:Npn \box_rotate:Nn #1#2
       { \hbox_set:Nn #1 { \rotatebox {#2} { \box_use:N #1 } } }
-    \cs_set_protected:Npn \box_resize:Nnn #1#2#3
+    \cs_set_protected:Npn \box_resize_to_wd_and_ht_plus_dp:Nnn #1#2#3
       {
         \hbox_set:Nn #1
           {
