--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1332,7 +1332,7 @@
           \dim_to_fp:n {#3}
         / \dim_to_fp:n { \coffin_ht:N #1 + \coffin_dp:N #1 }
       }
-    \box_resize:Nnn #1 {#2} {#3}
+    \box_resize_to_wd_and_ht_plus_dp:Nnn #1 {#2} {#3}
     \@@_resize_common:Nnn #1 {#2} {#3}
   }
 \cs_generate_variant:Nn \coffin_resize:Nnn { c }
