--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -626,9 +626,10 @@
 %   The resizing applies within the current \TeX{} group level.
 % \end{function}
 %
-% \begin{function}{\box_resize:Nnn, \box_resize:cnn}
+% \begin{function}[added = 2017-04-06]
+%   {\box_resize_to_wd_and_ht_plus_dp:Nnn, \box_resize_to_wd_and_ht_plus_dp:cnn}
 %   \begin{syntax}
-%     \cs{box_resize:Nnn} \meta{box} \Arg{x-size} \Arg{y-size}
+%     \cs{box_resize_to_wd_and_ht_plus_dp:Nnn} \meta{box} \Arg{x-size} \Arg{y-size}
 %   \end{syntax}
 %   Resize the \meta{box} to \meta{x-size} horizontally and \meta{y-size}
 %   vertically (both of the sizes are dimension expressions).
@@ -1652,14 +1653,15 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}{\box_resize:Nnn, \box_resize:cnn}
+% \begin{macro}
+%   {\box_resize_to_wd_and_ht_plus_dp:Nnn, \box_resize_to_wd_and_ht_plus_dp:cnn}
 % \begin{macro}[aux]{\@@_resize_set_corners:N}
 % \begin{macro}[aux]{\@@_resize:N}
 % \begin{macro}[aux]{\@@_resize:NNN}
 %   Resizing a box starts by working out the various dimensions of the
 %   existing box.
 %    \begin{macrocode}
-\cs_new_protected:Npn \box_resize:Nnn #1#2#3
+\cs_new_protected:Npn \box_resize_to_wd_and_ht_plus_dp:Nnn #1#2#3
   {
     \hbox_set:Nn #1
       {
@@ -1685,7 +1687,7 @@
         \@@_resize:N #1
       }
   }
-\cs_generate_variant:Nn \box_resize:Nnn { c }
+\cs_generate_variant:Nn \box_resize_to_wd_and_ht_plus_dp:Nnn { c }
 \cs_new_protected:Npn \@@_resize_set_corners:N #1
   {
     \dim_set:Nn \l_@@_top_dim    {  \box_ht:N #1 }
@@ -1917,6 +1919,15 @@
           }
       }
   }
+%    \end{macrocode}
+% \end{macro}
+%
+% \subsection{Deprecated functions}
+%
+% \begin{macro}[deprecated = 2017-04-06]{\box_resize:Nnn, \box_resize:cnn}
+%    \begin{macrocode}
+\cs_new_eq:NN \box_resize:Nnn \box_resize_to_wd_and_ht_plus_dp:Nnn
+\cs_new_eq:NN \box_resize:cnn \box_resize_to_wd_and_ht_plus_dp:cnn
 %    \end{macrocode}
 % \end{macro}
 %
