--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -588,20 +588,18 @@
 %   \begin{syntax}
 %     \cs{box_autosize_to_wd_and_ht:Nnn} \meta{box} \Arg{x-size} \Arg{y-size}
 %   \end{syntax}
-%   Resize the \meta{box} to fit within the given \meta{x-size} (horizontally)
-%   and \meta{y-size} (vertically): both of the sizes are dimension
-%   expressions).
-%   The \meta{y-size} is the height only: it does not include any depth.
-%   The updated \meta{box} will be an hbox, irrespective of the nature
-%   of the \meta{box}  before the resizing is applied. The final size of the
-%   box will be the smaller of \Arg{x-size} and \Arg{y-size}, \emph{i.e.}~the
-%   result will fit within the dimensions specified.
-%   Negative sizes will
-%   cause the material in the \meta{box} to be reversed in direction, but the
-%   reference point of the \meta{box} will be unchanged.
-%   Thus negative $y$-sizes will result in a box a depth dependent on the
-%   height of the original box a height dependent on the depth.
-%   The resizing applies within the current \TeX{} group level.
+%   Resizes the \meta{box} to fit within the given \meta{x-size} (horizontally)
+%   and \meta{y-size} (vertically); both of the sizes are dimension
+%   expressions. The \meta{y-size} is the height only: it does not include any
+%   depth. The updated \meta{box} will be an |hbox|, irrespective of the nature
+%   of the \meta{box} before the resizing is applied. The final size of the
+%   \meta{box} will be the smaller of \Arg{x-size} and \Arg{y-size},
+%   \emph{i.e.}~the result will fit within the dimensions specified. Negative
+%   sizes will cause the material in the \meta{box} to be reversed in direction,
+%   but the reference point of the \meta{box} will be unchanged. Thus a negative
+%   \meta{y-size} will result in the \meta{box} having a depth dependent on the
+%   height of the original and \emph{vice versa}. The resizing applies within
+%   the current \TeX{} group level.
 % \end{function}
 %
 % \begin{function}[added = 2017-04-04]
@@ -609,56 +607,18 @@
 %   \begin{syntax}
 %     \cs{box_autosize_to_wd_and_ht_plus_dp:Nnn} \meta{box} \Arg{x-size} \Arg{y-size}
 %   \end{syntax}
-%   Resize the \meta{box} to fit within the given \meta{x-size} (horizontally)
-%   and \meta{y-size} (vertically): both of the sizes are dimension
-%   expressions).
-%   The \meta{y-size} is the vertical size (height plus depth) of
-%   the box.
-%   The updated \meta{box} will be an hbox, irrespective of the nature
-%   of the \meta{box}  before the resizing is applied. The final size of the
-%   box will be the smaller of \Arg{x-size} and \Arg{y-size}, \emph{i.e.}~the
-%   result will fit within the dimensions specified.
-%   Negative sizes will
-%   cause the material in the \meta{box} to be reversed in direction, but the
-%   reference point of the \meta{box} will be unchanged.
-%   Thus negative $y$-sizes will result in a box a depth dependent on the
-%   height of the original box a height dependent on the depth.
-%   The resizing applies within the current \TeX{} group level.
-% \end{function}
-%
-% \begin{function}[added = 2017-04-06]
-%   {\box_resize_to_wd_and_ht_plus_dp:Nnn, \box_resize_to_wd_and_ht_plus_dp:cnn}
-%   \begin{syntax}
-%     \cs{box_resize_to_wd_and_ht_plus_dp:Nnn} \meta{box} \Arg{x-size} \Arg{y-size}
-%   \end{syntax}
-%   Resize the \meta{box} to \meta{x-size} horizontally and \meta{y-size}
-%   vertically (both of the sizes are dimension expressions).
-%   The \meta{y-size} is the vertical size (height plus depth) of
-%   the box. The updated \meta{box} will be an hbox, irrespective of the nature
-%   of the \meta{box}  before the resizing is applied. Negative sizes will
-%   cause the material in the \meta{box} to be reversed in direction, but the
-%   reference point of the \meta{box} will be unchanged.
-%   Thus negative $y$-sizes will result in a box a depth dependent on the
-%   height of the original box a height dependent on the depth.
-%   The resizing applies within the current \TeX{} group level.
-% \end{function}
-%
-% \begin{function}
-%   {\box_resize_to_ht_plus_dp:Nn, \box_resize_to_ht_plus_dp:cn}
-%   \begin{syntax}
-%     \cs{box_resize_to_ht_plus_dp:Nn} \meta{box} \Arg{y-size}
-%   \end{syntax}
-%   Resize the \meta{box} to \meta{y-size} vertically, scaling the horizontal
-%   size by the same amount (\meta{y-size} is a dimension expression).
-%   The \meta{y-size} is the vertical size (height plus depth) of
-%   the box.
-%   The updated \meta{box} will be an hbox, irrespective of the nature
-%   of the \meta{box}  before the resizing is applied. A negative size will
-%   cause the material in the \meta{box} to be reversed in direction, but the
-%   reference point of the \meta{box} will be unchanged.
-%   Thus negative $y$-sizes will result in a box with depth dependent on the
-%   height of the original box and height dependent on the depth of the original.
-%   The resizing applies within the current \TeX{} group level.
+%   Resizes the \meta{box} to fit within the given \meta{x-size} (horizontally)
+%   and \meta{y-size} (vertically); both of the sizes are dimension
+%   expressions. The \meta{y-size} is the total vertical size (height plus
+%   depth). The updated \meta{box} will be an |hbox|, irrespective of the nature
+%   of the \meta{box} before the resizing is applied. The final size of the
+%   \meta{box} will be the smaller of \Arg{x-size} and \Arg{y-size},
+%   \emph{i.e.}~the result will fit within the dimensions specified. Negative
+%   sizes will cause the material in the \meta{box} to be reversed in direction,
+%   but the reference point of the \meta{box} will be unchanged. Thus a negative
+%   \meta{y-size} will result in the \meta{box} having a depth dependent on the
+%   height of the original and \emph{vice versa}. The resizing applies within
+%   the current \TeX{} group level.
 % \end{function}
 %
 % \begin{function}
@@ -666,33 +626,48 @@
 %   \begin{syntax}
 %     \cs{box_resize_to_ht:Nn} \meta{box} \Arg{y-size}
 %   \end{syntax}
-%   Resize the \meta{box} to \meta{y-size} vertically, scaling the horizontal
-%   size by the same amount (\meta{y-size} is a dimension expression).
-%   The \meta{y-size} is the height only, not including depth, of
-%   the box.
-%   The updated \meta{box} will be an hbox, irrespective of the nature
-%   of the \meta{box}  before the resizing is applied.
-%   A negative size will
-%   cause the material in the \meta{box} to be reversed in direction, but the
-%   reference point of the \meta{box} will be unchanged.
-%   Thus negative $y$-sizes will result in a box with depth dependent on the
-%   height of the original box and height dependent on the depth of the original.
-%   The resizing applies within the current \TeX{} group level.
+%   Resizes the \meta{box} to \meta{y-size} (vertically), scaling the horizontal
+%   size by the same amount; \meta{y-size} is a dimension expression. The
+%   \meta{y-size} is the height only: it does not include any depth. The updated
+%   \meta{box} will be an |hbox|, irrespective of the nature of the \meta{box}
+%   before the resizing is applied. A negative \meta{y-size} will cause the
+%   material in the \meta{box} to be reversed in direction, but the reference
+%   point of the \meta{box} will be unchanged. Thus a negative \meta{y-size}
+%   will result in the \meta{box} having a depth dependent on the height of the
+%   original and \emph{vice versa}. The resizing applies within the current
+%   \TeX{} group level.
+% \end{function}
+%
+% \begin{function}
+%   {\box_resize_to_ht_plus_dp:Nn, \box_resize_to_ht_plus_dp:cn}
+%   \begin{syntax}
+%     \cs{box_resize_to_ht_plus_dp:Nn} \meta{box} \Arg{y-size}
+%   \end{syntax}
+%   Resizes the \meta{box} to \meta{y-size} (vertically), scaling the horizontal
+%   size by the same amount; \meta{y-size} is a dimension expression. The
+%   \meta{y-size} is the total vertical size (height plus depth). The updated
+%   \meta{box} will be an |hbox|, irrespective of the nature of the \meta{box}
+%   before the resizing is applied. A negative \meta{y-size} will cause
+%   the material in the \meta{box} to be reversed in direction, but the
+%   reference point of the \meta{box} will be unchanged. Thus a negative
+%   \meta{y-size} will result in the \meta{box} having a depth dependent on the
+%   height of the original and \emph{vice versa}. The resizing applies within
+%   the current \TeX{} group level.
 % \end{function}
 %
 % \begin{function}{\box_resize_to_wd:Nn, \box_resize_to_wd:cn}
 %   \begin{syntax}
 %     \cs{box_resize_to_wd:Nn} \meta{box} \Arg{x-size}
 %   \end{syntax}
-%   Resize the \meta{box} to \meta{x-size} horizontally, scaling the vertical
-%   size by the same amount (\meta{x-size} is a dimension expression).
-%   The updated \meta{box} will be an hbox, irrespective of the nature
-%   of the \meta{box}  before the resizing is applied. A negative size will
-%   cause the material in the \meta{box} to be reversed in direction, but the
-%   reference point of the \meta{box} will be unchanged.
-%   Thus negative $y$-sizes will result in a box a depth dependent on the
-%   height of the original box a height dependent on the depth.
-%   The resizing applies within the current \TeX{} group level.
+%   Resizes the \meta{box} to \meta{x-size} (horizontally), scaling the vertical
+%   size by the same amount; \meta{x-size} is a dimension expression. The updated
+%   \meta{box} will be an |hbox|, irrespective of the nature of the \meta{box}
+%   before the resizing is applied. A negative \meta{x-size} will cause the
+%   material in the \meta{box} to be reversed in direction, but the reference
+%   point of the \meta{box} will be unchanged. Thus a negative \meta{x-size}
+%   will result in the \meta{box} having a depth dependent on the height of the
+%   original and \emph{vice versa}. The resizing applies within the current
+%   \TeX{} group level.
 % \end{function}
 %
 % \begin{function}[added = 2014-07-03]
@@ -700,14 +675,33 @@
 %   \begin{syntax}
 %     \cs{box_resize_to_wd_and_ht:Nnn} \meta{box} \Arg{x-size} \Arg{y-size}
 %   \end{syntax}
-%   Resize the \meta{box} to a \emph{height} of
-%   \meta{x-size} horizontally and \meta{y-size}
-%   vertically (both of the sizes are dimension expressions).
-%   The \meta{y-size} is the \emph{height} of the box, ignoring any depth.
-%   The updated \meta{box} will be an hbox, irrespective of the nature
-%   of the \meta{box}  before the resizing is applied. Negative sizes will
-%   cause the material in the \meta{box} to be reversed in direction, but the
-%   reference point of the \meta{box} will be unchanged.
+%   Resizes the \meta{box} to \meta{x-size} (horizontally) and \meta{y-size}
+%   (vertically): both of the sizes are dimension expressions. The
+%   \meta{y-size} is the height only and does not include any depth. The updated
+%   \meta{box} will be an |hbox|, irrespective of the nature of the \meta{box}
+%   before the resizing is applied. Negative sizes will cause the material in
+%   the \meta{box} to be reversed in direction, but the reference point of the
+%   \meta{box} will be unchanged. Thus a negative \meta{y-size} will result in
+%   the \meta{box} having a depth dependent on the height of the original and
+%   \emph{vice versa}. The resizing applies within the current \TeX{} group
+%   level.
+% \end{function}
+%
+% \begin{function}[added = 2017-04-06]
+%   {\box_resize_to_wd_and_ht_plus_dp:Nnn, \box_resize_to_wd_and_ht_plus_dp:cnn}
+%   \begin{syntax}
+%     \cs{box_resize_to_wd_and_ht_plus_dp:Nnn} \meta{box} \Arg{x-size} \Arg{y-size}
+%   \end{syntax}
+%   Resizes the \meta{box} to \meta{x-size} (horizontally) and \meta{y-size}
+%   (vertically): both of the sizes are dimension expressions. The
+%   \meta{y-size} is the total vertical size (height plus depth). The updated
+%   \meta{box} will be an |hbox|, irrespective of the nature of the \meta{box}
+%   before the resizing is applied. Negative sizes will cause the material in
+%   the \meta{box} to be reversed in direction, but the reference point of the
+%   \meta{box} will be unchanged. Thus a negative \meta{y-size} will result in
+%   the \meta{box} having a depth dependent on the height of the original and
+%   \emph{vice versa}. The resizing applies within the current \TeX{} group
+%   level.
 % \end{function}
 %
 % \begin{function}{\box_rotate:Nn, \box_rotate:cn}
@@ -717,10 +711,9 @@
 %   Rotates the \meta{box} by \meta{angle} (in degrees) anti-clockwise about
 %   its reference point. The reference point of the updated box will be moved
 %   horizontally such that it is at the left side of the smallest rectangle
-%   enclosing the rotated material.
-%   The updated \meta{box} will be an hbox, irrespective of the nature
-%   of the \meta{box} before the rotation is applied. The rotation applies
-%   within the current \TeX{} group level.
+%   enclosing the rotated material. The updated \meta{box} will be an |hbox|,
+%   irrespective of the nature of the \meta{box} before the rotation is applied.
+%   The rotation applies within the current \TeX{} group level.
 % \end{function}
 %
 % \begin{function}{\box_scale:Nnn, \box_scale:cnn}
@@ -729,13 +722,13 @@
 %   \end{syntax}
 %   Scales the \meta{box} by factors \meta{x-scale} and \meta{y-scale} in
 %   the horizontal and vertical directions, respectively (both scales are
-%   integer expressions). The updated \meta{box} will be an hbox, irrespective
+%   integer expressions). The updated \meta{box} will be an |hbox|, irrespective
 %   of the nature of the \meta{box} before the scaling is applied. Negative
 %   scalings will cause the material in the \meta{box} to be reversed in
 %   direction, but the reference point of the \meta{box} will be unchanged.
-%   Thus negative $y$-scales will result in a box a depth dependent on the
-%   height of the original box a height dependent on the depth.
-%   The resizing applies within the current \TeX{} group level.
+%   Thus a negative \meta{y-scale} will result in the \meta{box} having a depth
+%   dependent on the height of the original and \emph{vice versa}. The resizing
+%   applies within the current \TeX{} group level.
 % \end{function}
 %
 % \section{Primitive box conditionals}
