In l3deprecation: \box_resize:Nnn => \box_resize_to_wd_and_ht_plus_dp:Nnn

--- a/l3kernel/l3deprecation.dtx
+++ b/l3kernel/l3deprecation.dtx
@@ -140,6 +140,8 @@
     \@@_error:Nnn \tl_to_lowercase:n { } { 2017-12-31 }
     \@@_error:Nnn \tl_to_uppercase:n { } { 2017-12-31 }
     \@@_error:Nnn \ior_get_str:NN { \ior_str_get:NN } { 2017-12-31 }
+    \@@_error:Nnn \box_resize:Nnn { \box_resize_to_wd_and_ht_plus_dp:Nnn } { 2018-12-31 }
+    \@@_error:Nnn \box_resize:cnn { \box_resize_to_wd_and_ht_plus_dp:cnn } { 2018-12-31 }
     \@@_error:Nnn \c_minus_one { - 1 } { 2018-12-31 }
     \@@_error:Nnn \sort_ordered: { \sort_return_same: } { 2018-12-31 }
     \@@_error:Nnn \sort_reversed: { \sort_return_swapped: } { 2018-12-31 }
