Use lazy boolean functions in a few more places

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -3069,10 +3069,9 @@
 % octets, so that is taken as read.
 %    \begin{macrocode}
 \group_begin:
-  \bool_if:nT
-    {
-      \sys_if_engine_pdftex_p: || \sys_if_engine_uptex_p:
-    }
+  \bool_lazy_or:nnT
+    { \sys_if_engine_pdftex_p: }
+    { \sys_if_engine_uptex_p: }
     {
       \cs_set_protected:Npn \@@_loop:nn #1#2
         {
