Typos [ci skip]

--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -1029,8 +1029,8 @@
 %   Computes the sine, cosine, tangent, cotangent, cosecant, or secant
 %   of the \meta{fpexpr} given in radians.  For arguments given in
 %   degrees, see \texttt{sind}, \texttt{cosd}, \emph{etc.}  Note that
-%   since $\pi$~is irrational, $\operatorname{sin}(8pi)$ is not quite
-%   zero, while its analog $\operatorname{sind}(8\times 180)$ is exactly
+%   since $\pi$~is irrational, $\operatorname{sin}(8\mathrm{pi})$ is not quite
+%   zero, while its analogue $\operatorname{sind}(8\times 180)$ is exactly
 %   zero.  The trigonometric functions are undefined for
 %   an argument of $\pm\infty$, leading to the \enquote{invalid
 %     operation} exception.  Additionally, evaluating tangent,
@@ -1052,8 +1052,8 @@
 %   Computes the sine, cosine, tangent, cotangent, cosecant, or secant
 %   of the \meta{fpexpr} given in degrees.  For arguments given in
 %   radians, see \texttt{sin}, \texttt{cos}, \emph{etc.}  Note that
-%   since $\pi$~is irrational, $\operatorname{sin}(8pi)$ is not quite
-%   zero, while its analog $\operatorname{sind}(8\times 180)$ is exactly
+%   since $\pi$~is irrational, $\operatorname{sin}(8\mathrm{pi})$ is not quite
+%   zero, while its analogue $\operatorname{sind}(8\times 180)$ is exactly
 %   zero.  The trigonometric functions are undefined for
 %   an argument of $\pm\infty$, leading to the \enquote{invalid
 %     operation} exception.  Additionally, evaluating tangent,
