Documentation, code formatting

--- a/l3experimental/l3str/l3regex.dtx
+++ b/l3experimental/l3str/l3regex.dtx
@@ -1432,7 +1432,7 @@
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
-% ^^A todo: use char_generate in the rest of the file
+%
 % \begin{macro}[aux]{\@@_escape_x_test:N, \@@_escape_x_testii:N}
 %   Find out whether the first character is a left brace (allowing any
 %   number of hexadecimal digits), or not (allowing up to two
@@ -5124,7 +5124,8 @@
 %   wrapper for our purposes. The first argument is the null character
 %   with various catcodes. The second and third arguments are grabbed
 %   from the input stream: |#3| is the character whose character code to
-%   reproduce.
+%   reproduce.  We could use \cs{char_generate:nn} but only for some
+%   catcodes (active characters and spaces are not supported).
 %    \begin{macrocode}
   \cs_new_protected:Npn \@@_replacement_char:nNN #1#2#3
     {
