In inline mappings make auxiliary function be protected
Since the mapping itself requires various assignments it seems
sensible to make the auxiliary function be protected too, even
though it is not strictly necessary.

--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -1065,13 +1065,15 @@
 %   of the form \cs{@@_pair:wn} \meta{key} \cs{s_@@} \Arg{value}, there
 %   are a leading and a trailing tokens, but both are equal to
 %   \cs{scan_stop:}, hence have no effect in such inline mapping.
+%   Such \cs{scan_stop:} could have affected ligatures if they appeared
+%   during the mapping.
 %    \begin{macrocode}
 \cs_new_protected:Npn \prop_map_inline:Nn #1#2
   {
     \cs_gset_eq:cN
       { __prg_map_ \int_use:N \g__prg_map_int :wn } \@@_pair:wn
     \int_gincr:N \g__prg_map_int
-    \cs_gset:Npn \@@_pair:wn ##1 \s_@@ ##2 {#2}
+    \cs_gset_protected:Npn \@@_pair:wn ##1 \s_@@ ##2 {#2}
     #1
     \__prg_break_point:Nn \prop_map_break:
       {
