--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -2211,7 +2211,8 @@
 \cs_new_protected:Npn \tl_map_inline:nn #1#2
   {
     \int_gincr:N \g__prg_map_int
-    \cs_gset:cpn { __prg_map_ \int_use:N \g__prg_map_int :w } ##1 {#2}
+    \cs_gset_protected:cpn
+      { __prg_map_ \int_use:N \g__prg_map_int :w } ##1 {#2}
     \exp_args:Nc \@@_map_function:Nn
       { __prg_map_ \int_use:N \g__prg_map_int :w }
       #1 \q_recursion_tail
