--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -1553,7 +1553,8 @@
     \clist_if_empty:NF #1
       {
         \int_gincr:N \g__prg_map_int
-        \cs_gset:cpn { __prg_map_ \int_use:N \g__prg_map_int :w } ##1 {#2}
+        \cs_gset_protected:cpn
+          { __prg_map_ \int_use:N \g__prg_map_int :w } ##1 {#2}
         \exp_last_unbraced:Nco \@@_map_function:Nw
           { __prg_map_ \int_use:N \g__prg_map_int :w }
           #1 , \q_recursion_tail ,
